@@ -36,17 +36,17 @@ public class Search {
 
     private NameDeclaration searchUpward(NameOccurrence nameOccurrence, Scope scope) {
         if (TRACE) {
-            System.out.println("checking scope " + scope + " for name occurrence " + nameOccurrence);
+            System.out.println(" checking scope " + scope + " for name occurrence " + nameOccurrence);
         }
         if (!scope.contains(nameOccurrence) && scope.getParent() != null) {
             if (TRACE) {
-        	System.out.println("moving up fm " + scope + " to " + scope.getParent());
+                System.out.println(" moving up from " + scope + " to " + scope.getParent());
             }
             return searchUpward(nameOccurrence, scope.getParent());
         }
         if (scope.contains(nameOccurrence)) {
             if (TRACE) {
-        	System.out.println("found it!");
+                System.out.println(" found it!");
             }
             return scope.addVariableNameOccurrence(nameOccurrence);
         }
