@@ -63,6 +63,7 @@ Some for loops can be simplified to while loops, this makes them more concise.
                 <![CDATA[
 //ForStatement
  [count(*) > 1]
+ [not(LocalVariableDeclaration)]
  [not(ForInit)]
  [not(ForUpdate)]
  [not(Type and Expression and Statement)]
