@@ -485,4 +485,29 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>bug 3574133 - false + with enums</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public enum MyEnum {
+    A("a"),
+    B("b");
+
+    private final String description; // <-- SingularField reported
+
+    private MyEnum(String description) {
+        this.description = description;
+    }
+
+    public static MyEnum byDescription(String description) {
+        for (MyEnum myEnum : values()) {
+            if (myEnum.description.equals(description)) { // <--- USED HERE
+            return myEnum;
+            }
+        }
+        return null;
+    }
+}
+]]></code>
+    </test-code>
 </test-data>
