@@ -38,6 +38,7 @@ Fixed bug 3530124: pmd: parsing of generic method call with super fails
 Fixed bug 3496028: pmd-4.2.6: MissingBreakInSwitch fails to report violation
 Fixed bug 3484404: Invalid NPath calculation in return statement. Thanks to Prabhjot Singh for the patch.
 Fixed bug 3560464: c/c++ \ as a continuation character not supported
+Fixed bug 3574133: False+ : SingularField
 Improved JSP parser to be less strict with not valid XML documents (like HTML). Thanks to Victor Bucutea.
 Fixed bgastviewer not working. Thanks to Victor Bucutea.
 
